fix: image dialog spacing and color and prod type menu width

--- a/src/app/components/results-menu/scene-detail/image-dialog/image-dialog.component.scss
+++ b/src/app/components/results-menu/scene-detail/image-dialog/image-dialog.component.scss
@@ -65,6 +65,7 @@ a {
     @include themify($themes) {
       background-color: themed('primary-light');
       border-left-color: themed('primary-dark');
+      color: themed('dark-primary-text');
     }
 
     min-width: 200px;
@@ -76,7 +77,7 @@ a {
     max-width: 25%;
 
     .scene-detail {
-      margin-left: 10px;
+      margin: 0 10px;
     }
   }
 }
@@ -226,11 +227,7 @@ a {
     background-color: lighten(themed('primary-light'), 10%);
   }
 
-  border-radius: 2px !important;
-  padding-left: 5px !important;
   margin-bottom: 5px;
-  padding-right: 15px !important;
-  width: fit-content !important;
 }
 
 .on-demand-scene-names {
